--- a/css/main.css
+++ b/css/main.css
@@ -90,12 +90,12 @@ li {
   position: relative;
 }
 
-.nav1-url:hover, .nav1-url:focus {
-  color: #2196f3;
+.main-navigation .nav1 + .nav1 {
+  margin-left: 50px;
 }
 
-.main-navigation .nav1-url + .nav1-url {
-  margin-left: 50px;
+.nav1-url:hover, .nav1-url:focus {
+  color: #2196f3;
 }
 
 .link-current {
@@ -528,8 +528,7 @@ li {
   fill: #afb1b8;
 }
 
-.companies-hover:hover,
-.companies-hover:focus {
+.companies-hover:hover, .companies-hover:focus {
   border: 1px solid #2196f3;
   border-radius: 4px;
   fill: #2196f3;
@@ -555,9 +554,17 @@ li {
   height: 50px;
 }
 
+.icon-companies:hover, .icon-companies:focus {
+  fill: #2196f3;
+}
+
 .icon-companies2 {
   width: 70px;
   height: 50px;
+}
+
+.icon-companies2:hover, .icon-companies2:focus {
+  fill: #2196f3;
 }
 
 .flex-footer {
@@ -605,13 +612,13 @@ li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: rgba(255, 255, 255, 0.6);
   -webkit-transition-property: background-color;
   transition-property: background-color;
   -webkit-transition-duration: 250ms;
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .social-element-url:hover, .social-element-url:focus {
@@ -720,6 +727,7 @@ li {
   bottom: 0;
   -webkit-transform: translate(50%, 20%);
           transform: translate(50%, 20%);
+  fill: #ffffff;
 }
 
 .form-footer {
@@ -773,5 +781,272 @@ li {
   line-height: 20px;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  visibility: visible;
+  opacity: 1;
+  background: rgba(0, 0, 0, 0.2);
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden .modal {
+  -webkit-transform: translate(-50%, -50%) scale(0.7);
+          transform: translate(-50%, -50%) scale(0.7);
+}
+
+.modal-slogan {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 23px;
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin-bottom: 30px;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 528px;
+  min-height: 581px;
+  background-color: #ffffff;
+  padding: 40px;
+}
+
+.form-field {
+  position: relative;
+  margin-bottom: 30px;
+}
+
+.form-label, .form-label2 {
+  position: absolute;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.01em;
+  color: #757575;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-label {
+  top: 50%;
+  left: 40px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.form-label2 {
+  top: 12px;
+  left: 16px;
+}
+
+.form-label3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.01em;
+  cursor: pointer;
+  color: #757575;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.form-input {
+  width: 100%;
+  margin: 0;
+  padding: 10px 20px;
+  padding-left: 40px;
+  font: inherit;
+  border-radius: 3px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.form-input:focus {
+  border-radius: 3px;
+  border: 1px solid #2196f3;
+  outline: none;
+}
+
+.comment2:focus + .form-label2,
+.comment2:not(:placeholder-shown) + .form-label2 {
+  color: #2196f3;
+  -webkit-transform: translate(-15px, -30px);
+          transform: translate(-15px, -30px);
+}
+
+.comment2:focus,
+.comment2:not(:placeholder-shown) {
+  border-color: #2196f3;
+  outline: none;
+}
+
+.comment2 {
+  width: 100%;
+  resize: none;
+  padding: 12px 0 0 16px;
+  white-space: nowrap;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus + .form-label,
+.form-input:not(:placeholder-shown) + .form-label {
+  color: #2196f3;
+  -webkit-transform: translate(-23px, -40px);
+          transform: translate(-23px, -40px);
+}
+
+.icon-modal {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+}
+
+.form-input:focus ~ .icon-modal {
+  fill: #2196f3;
+}
+
+.checkbox {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0px;
+  padding: 0px;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.checkbox:checked + .icon-checkbox {
+  background-color: #2196f3;
+  background-image: url(../svg/icon-check.svg);
+  background-size: cover;
+  border-radius: 2px;
+  border-color: #2196f3;
+}
+
+.icon-checkbox {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border-radius: 2px;
+  margin-right: 8px;
+  border: 2px solid #212121;
+  background-color: #ffffff;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contract, .confirm {
+  font-family: "Roboto", sans-serif;
+  font-style: "Raleway", sans-serif;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  display: block;
+  margin-left: 5px;
+  text-align: right;
+}
+
+.contract {
+  text-decoration: underline;
+  color: #2196f3;
+}
+
+.confirm {
+  color: #757575;
+}
+
+.submit-modal {
+  font-family: "Roboto", sans-serif;
+  font-style: "Raleway", sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background: #188ce8;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  width: 200px;
+  height: 50px;
+  padding: 0;
+  cursor: pointer;
+  border: none;
+}
+
+.modal-button {
+  margin-top: 31px;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0px;
+}
+
+.icon-close-button {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  border: 0;
+  border-radius: 50%;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+}
+
+.icon-close {
+  width: 11px;
+  height: 11px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 /*# sourceMappingURL=main.css.map */
