--- a/sass/components/_footer-page.scss
+++ b/sass/components/_footer-page.scss
@@ -36,10 +36,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: $color-grey-footer;
   transition-property: background-color;
   transition-duration: $duration;
   transition-timing-function: $cubic;
+  background-color: rgba(255, 255, 255, 0.1);
 
   &:hover,
   &:focus {
@@ -152,6 +152,7 @@
   bottom: 0;
 
   transform: translate(50%, 20%);
+  fill: $color-white;
 }
 
 .form-footer {
