--- a/sass/components/_main-content.scss
+++ b/sass/components/_main-content.scss
@@ -318,13 +318,13 @@
   transition-duration: $duration;
   transition-timing-function: $cubic;
   fill: #afb1b8;
-}
 
-.companies-hover:hover,
-.companies-hover:focus {
-  border: 1px solid #2196f3;
-  border-radius: 4px;
-  fill: #2196f3;
+  &:hover,
+  &:focus {
+    border: 1px solid $color-hover;
+    border-radius: 4px;
+    fill: $color-hover;
+  }
 }
 
 .clients {
@@ -343,10 +343,19 @@
   width: 50px;
   height: 50px;
   @extend %icon-companies-common;
+
+  &:hover,
+  &:focus {
+    fill: $color-hover;
+  }
 }
 
 .icon-companies2 {
   width: 70px;
   height: 50px;
   @extend %icon-companies-common;
+  &:hover,
+  &:focus {
+    fill: $color-hover;
+  }
 }
