--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,3 +2,4 @@
 @import "./components/page-header";
 @import "./components/main-content";
 @import "./components/footer-page";
+@import "./components/modal";
