--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,4 @@
 @import "./components/main-content";
 @import "./components/footer-page";
 @import "./components/modal";
+@import "./components/portfolio-main-content";
