--- a/sass/components/_main-content.scss
+++ b/sass/components/_main-content.scss
@@ -1,7 +1,6 @@
 .hero {
   color: $color-white;
-  font-family: $font-main;
-  font-style: $font-style;
+  @extend %font;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -33,8 +32,7 @@
 .order-service {
   color: $color-white;
   background-color: $background-color-blue;
-  font-family: $font-main;
-  font-style: $font-style;
+  @extend %font;
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
@@ -57,8 +55,7 @@
 
 .benefits-head {
   color: $color-black;
-  font-family: $font-main;
-  font-style: $font-style;
+  @extend %font;
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
@@ -90,8 +87,7 @@
 
 .benefits-descr {
   color: $color-grey;
-  $font-main: Roboto;
-  $font-style: normal;
+  @extend %font;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -140,8 +136,7 @@
 
 .head-2-descr {
   color: $color-black;
-  font-family: $font-main;
-  font-style: $font-style;
+  @extend %font;
   font-weight: bold;
   font-size: 36px;
   line-height: 1.17;
@@ -158,8 +153,7 @@
 .work-head {
   color: $color-white;
   background-color: rgba(47, 48, 58, 0.8);
-  font-family: $font-main;
-  font-style: $font-style;
+  @extend %font;
   font-weight: bold;
   font-size: 14px;
   line-height: 1.14;
@@ -223,8 +217,7 @@
 
 .name {
   color: $color-black;
-  font-family: $font-main;
-  font-style: $font-style;
+  @extend %font;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -236,8 +229,7 @@
 
 .job {
   color: $color-grey;
-  font-family: $font-main;
-  font-style: $font-style;
+  @extend %font;
   font-weight: normal;
   font-size: 16px;
   line-height: 1.19;
