--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -19,8 +19,7 @@
 }
 
 .modal-slogan {
-  font-family: $font-main;
-  font-style: $font-style;
+  @extend %font;
   font-weight: bold;
   font-size: 20px;
   line-height: 23px;
@@ -48,8 +47,7 @@
 
 %form-label-common {
   position: absolute;
-  font-family: $font-main;
-  font-style: $font-style;
+  @extend %font;
   font-weight: normal;
   font-size: 14px;
   line-height: 16px;
@@ -74,8 +72,7 @@
 
 .form-label3 {
   display: flex;
-  font-family: $font-main;
-  font-style: $font-style;
+  @extend %font;
   font-weight: normal;
   font-size: 14px;
   line-height: 16px;
@@ -178,8 +175,7 @@
 }
 
 %contract-confirm-common {
-  font-family: $font-main;
-  font-style: $font-logo;
+  @extend %font;
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
@@ -201,8 +197,7 @@
 }
 
 .submit-modal {
-  font-family: $font-main;
-  font-style: $font-logo;
+  @extend %font;
   font-weight: bold;
   font-size: 16px;
   line-height: 30px;
