--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -14,6 +14,11 @@ $font-style: normal;
 $cubic: cubic-bezier(0.4, 0, 0.2, 1);
 $duration: 250ms;
 
+%font {
+  font-family: $font-main;
+  font-style: $font-style;
+}
+
 html {
   box-sizing: border-box;
 }
